fixed elements z-index.

--- a/app/assets/styles/components/_cursor.css
+++ b/app/assets/styles/components/_cursor.css
@@ -1,4 +1,5 @@
 .cursor {
+  z-index: 1;
   position: absolute;
   display: inline-block;
   top: 0;
